[gd_scene load_steps=5 format=3 uid="uid://cglxhe2wq3nvy"]

[ext_resource type="Script" path="res://scripts/bosses/lobbyist_boss.gd" id="1_lobbyist"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(80, 80)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(80, 80)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.8, 0.2, 0.2, 1)

[node name="LobbyistBoss" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 25
script = ExtResource("1_lobbyist")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.5, 1, 1)
texture = SubResource("PlaceholderTexture2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -50.0
theme_override_styles/fill = SubResource("StyleBoxFlat_1")
value = 100.0
show_percentage = false

[node name="ShieldContainer" type="Node2D" parent="."]

[node name="MinionSpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="MinionSpawnPoints"]
position = Vector2(-200, 0)

[node name="SpawnPoint2" type="Marker2D" parent="MinionSpawnPoints"]
position = Vector2(200, 0)

[node name="SpawnPoint3" type="Marker2D" parent="MinionSpawnPoints"]
position = Vector2(0, -150)

[node name="SpawnPoint4" type="Marker2D" parent="MinionSpawnPoints"]
position = Vector2(0, 150)
